--- a/tester/Makefile
+++ b/tester/Makefile
@@ -6,7 +6,7 @@
 #    By: eguelin <eguelin@student.42lyon.fr>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/15 18:40:32 by eguelin           #+#    #+#              #
-#    Updated: 2025/01/16 17:37:41 by eguelin          ###   ########.fr        #
+#    Updated: 2025/01/17 10:31:01 by eguelin          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,10 +22,12 @@ BONUS		= test_bonus
 OBJS_DIR	= .objs/
 SRCS_DIR	= srcs/
 INCS_DIR	= includes/
+BONUS_DIR	= bonus/
 LIB_DIR		= ../
 CC			= gcc
-CFLAGS		= -Wall -Wextra -Werror -fsanitize=address -g
+CFLAGS		= -Wall -Wextra -Werror -g
 INCS		= -I $(INCS_DIR) -I $(LIB_DIR)$(INCS_DIR)
+INCS_BONUS	= $(INCS) -I $(INCS_DIR)$(BONUS_DIR) -I $(LIB_DIR)$(INCS_DIR)$(BONUS_DIR)
 LIB			= -L$(LIB_DIR) -lasm
 RM			= rm -fr
 
@@ -59,17 +61,19 @@ FULL_CLEAN_MSG	= "$(PURPLE)Full cleaning $(NAME) $(DEFAULT)done on $(YELLOW)$(sh
 ALL_FILES	= test.c \
 			  test_utils.c
 
-ALL_BONUS_FILES	= test_bonus.c \
-				  test_utils.c \
-				  test_utils_bonus.c
-
 OBJS_FILES	= $(addprefix $(OBJS_DIR), $(ALL_FILES:.c=.o))
 
 DEP_FILES	= $(OBJS_FILES:.o=.d)
 
+BONUS_FILES	= test_bonus.c \
+			  test_utils_bonus.c
+
+ALL_BONUS_FILES	= test_utils.c \
+				  $(addprefix $(BONUS_DIR), $(BONUS_FILES))
+
 BONUS_OBJS_FILES	= $(addprefix $(OBJS_DIR), $(ALL_BONUS_FILES:.c=.o))
 
-BONUS_DEP_FILES	= $(BONUS_OBJS_FILES:.o=.d)
+BONUS_DEP_FILES		= $(BONUS_OBJS_FILES:.o=.d)
 
 # **************************************************************************** #
 #                                     Rules                                    #
@@ -82,13 +86,16 @@ $(NAME): $(OBJS_FILES) libasm
 	printf $(COMP_MSG)
 	./$(NAME)
 
-$(BONUS): $(OBJS_DIR)$(BONUS_DIR) $(BONUS_OBJS_FILES) libasm_bonus
-	$(CC) $(CFLAGS) $(BONUS_OBJS_FILES) $(INCS) $(LIB) -o $(BONUS)
+$(BONUS): $(BONUS_OBJS_FILES) libasm_bonus
+	$(CC) $(CFLAGS) $(BONUS_OBJS_FILES) $(INCS_BONUS) $(LIB) -o $(BONUS)
 	printf $(BONUS_COMP_MSG)
 	./$(BONUS)
 
 $(OBJS_DIR)%.o: $(SRCS_DIR)%.c | $(OBJS_DIR)
 	$(CC) $(CFLAGS) $(INCS) -MMD -MP -c $< -o $@
+
+$(OBJS_DIR)$(BONUS_DIR)%.o: $(SRCS_DIR)$(BONUS_DIR)%.c | $(OBJS_DIR)$(BONUS_DIR)
+	$(CC) $(CFLAGS) $(INCS_BONUS) -MMD -MP -c $< -o $@
 
 clean:
 	$(MAKE) clean -sC $(LIB_DIR)
@@ -110,6 +117,9 @@ libasm_bonus:
 	$(MAKE) bonus -sC $(LIB_DIR)
 
 $(OBJS_DIR):
+	mkdir -p $@
+
+$(OBJS_DIR)$(BONUS_DIR):
 	mkdir -p $@
 
 -include $(DEP_FILES) $(BONUS_DEP_FILES)
